Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.11.10, 11.4.4
Description
The test innodb.innodb-index started to fail recently with the 10.11 and later branches. The earliest such failure that I found in the cross-reference is the following:
|
bb-10.11-MDEV-35072 3d70e432618f64231420a2c109bb3fb3687aae08 |
innodb.innodb-index w8 [ fail ]
|
Test ended at 2024-10-09 15:57:37
|
|
|
CURRENT_TEST: innodb.innodb-index
|
mysqltest: At line 1156: query 'SELECT * FROM t1' failed: ER_UNKNOWN_STORAGE_ENGINE (1286): Unknown storage engine 'InnoDB'
|
This is 1 commit ahead of 10.11 8a6a4c947a0ca3d2fdca752d7440bdc5c6c83e37. The regression should have been introduced or exposed in some earlier change. Unfortunately, no server error logs are available for that failure. The oldest failure with a server error log that I could find was this one:
https://buildbot.mariadb.net/buildbot/builders/kvm-rpm-fedora38-aarch64/builds/1747/steps/mtr/logs/mysqld.1.err.3
|
10.11 cca85eb16e052f6ffc1d091cfba759fc2ba92ebf |
2024-11-01 19:37:08 0 [Note] InnoDB: Using ARMv8 crc32 + pmull instructions
|
2024-11-01 19:37:08 0 [Note] InnoDB: Using liburing
|
2024-11-01 19:37:08 0 [Note] InnoDB: Initializing buffer pool, total size = 8.000MiB, chunk size = 1.000MiB
|
2024-11-01 19:37:08 0 [Note] InnoDB: Completed initialization of buffer pool
|
2024-11-01 19:37:08 0 [Note] InnoDB: Buffered log writes (block size=512 bytes)
|
2024-11-01 19:37:08 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=26115605
|
2024-11-01 19:37:08 0 [Note] InnoDB: Multi-batch recovery needed at LSN 28893886
|
2024-11-01 19:37:08 0 [Note] InnoDB: End of log at LSN=29667122
|
2024-11-01 19:37:08 0 [ERROR] InnoDB: Tablespace 231 was not found at ./test/t2.ibd.
|
2024-11-01 19:37:08 0 [Note] InnoDB: Set innodb_force_recovery=1 to ignore this and to permanently lose all changes to the tablespace.
|
2024-11-01 19:37:08 0 [ERROR] InnoDB: Plugin initialization aborted with error Tablespace not found
|
Another failure: https://ci.mariadb.org/52081/logs/amd64-sles-1505/nm/mysqld.1.err.11 for https://buildbot.mariadb.org/#/builders/841/builds/44
|
10.11 a54692a4b5bab8dc3aaac039bf9f9cb84bb2c9bf |
2024-11-21 10:52:18 0 [Note] InnoDB: Using crc32 + pclmulqdq instructions
|
2024-11-21 10:52:18 0 [Note] InnoDB: Initializing buffer pool, total size = 8.000MiB, chunk size = 1.000MiB
|
2024-11-21 10:52:18 0 [Note] InnoDB: Completed initialization of buffer pool
|
2024-11-21 10:52:18 0 [Note] InnoDB: Buffered log writes (block size=512 bytes)
|
2024-11-21 10:52:18 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=23961029
|
2024-11-21 10:52:18 0 [Note] InnoDB: Multi-batch recovery needed at LSN 26833191
|
2024-11-21 10:52:18 0 [Note] InnoDB: End of log at LSN=29586784
|
2024-11-21 10:52:18 0 [Note] InnoDB: Set innodb_force_recovery=1 to ignore corrupted pages.
|
2024-11-21 10:52:18 0 [ERROR] InnoDB: Unable to apply log to corrupted page 245 in file ./ibdata1
|
2024-11-21 10:52:18 0 [Note] InnoDB: Retry with innodb_force_recovery=5
|
2024-11-21 10:52:18 0 [ERROR] InnoDB: Plugin initialization aborted with error Page read from tablespace is corrupted.
|
Attachments
Issue Links
- is caused by
-
MDEV-34850 Unable to create backup with mariabackup: try increasing innodb_log_file_size
-
- Closed
-
- relates to
-
MDEV-35830 innodb_undo_log_truncate=ON during mariadb-backup --backup does not work as intended
-
- Closed
-